Fix warning introduced by 284948@main https://bugs.webkit.org/show_bug.cgi?id=281473

Unreviewed -Werror build fix.

* Source/JavaScriptCore/wasm/WasmCalleeGroup.cpp:
(JSC::Wasm::CalleeGroup::calleeIsReferenced const):
Ensure that the switch has a default branch.

Canonical link: https://commits.webkit.org/285175@main